; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_unit-def.c_unit_dbus_interface_from_name.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_unit-def.c_unit_dbus_interface_from_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @unit_dbus_interface_from_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i64 @unit_name_to_type(i8* %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load i64, i64* %4, align 8
  %12 = call i8* @unit_dbus_interface_from_type(i64 %11)
  store i8* %12, i8** %2, align 8
  br label %13

13:                                               ; preds = %10, %9
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}

declare dso_local i64 @unit_name_to_type(i8*) #1

declare dso_local i8* @unit_dbus_interface_from_type(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
